--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: imemo
+  username: imemo-kuma
+  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
+
